Sonar Fixes (6)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>